--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,21 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.1",
-    "recharts": "^3.5.1"
+    "recharts": "^3.5.1",
+    "lightweight-charts": "^4.1.0",
+    "monaco-editor": "^0.50.0",
+    "zustand": "^4.4.0",
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/jest": "^29.5.0",
+    "@types/papaparse": "^5.3.14",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.17",
+    "jest": "^29.7.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.8.2",
+    "ts-jest": "^29.1.0",
     "vite": "^6.2.0"
   }
 }
